--- a/beatstore.html
+++ b/beatstore.html
@@ -6,7 +6,7 @@
 			<meta name="description" content="Homepage of Ghost studios Inc.">
 			<meta name="keywords" content="beat production, recording studio, professional beat production">
 			<meta name="author" content="David Asamani DaCosta">
-			<title>Ghost Studios | About</title>
+			<title>Ghost Studios | beatstore</title>
 			<link rel="icon" href="./img/tab_icon.png">
 			<link rel="stylesheet" href="style.css">
 		</head>
@@ -19,7 +19,7 @@
 						<nav>
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li class="current"><a href="services.html">Services</a></li>
+								<li><a href="services.html">Services</a></li>
 								<li><a href="about.html">About</a></li>
 							</ul>
 						</nav>
@@ -31,14 +31,18 @@
 					<div class="box">
 						<h3>Trap</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<audio loop controls src="./aud/trap.m4a"></audio>
 					</div>
 					<div class="box">
 						<h3>Hiphop</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<audio loop controls src="./aud/hiphop.m4a"></audio>
+
 					</div>
 					<div class="box">
 						<h3>Afrobeats</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<audio loop controls src="./aud/afrobeat.mp3"></audio>
 					</div>
 
 					<aside id="sidebar">
