--- a/beatstore.html
+++ b/beatstore.html
@@ -6,7 +6,7 @@
 			<meta name="description" content="Homepage of Ghost studios Inc.">
 			<meta name="keywords" content="beat production, recording studio, professional beat production">
 			<meta name="author" content="David Asamani DaCosta">
-			<title>Ghost Studios | beatstore</title>
+			<title>Ghost Studios | Beatstore</title>
 			<link rel="icon" href="./img/tab_icon.png">
 			<link rel="stylesheet" href="style.css">
 		</head>
