colour tweaks, media query edits

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 		  <section id="boxes">
 			  <div class="container">
 				  <div class="box">
-					  <img src="./img/logo_beat.jpg">
+					  <img src="https://images.unsplash.com/photo-1627773755683-dfcf2774596a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=852">
 					  <h3>Beat Production</h3>
 					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				  </div>
 				  <div class="box">
-					  <img src="./img/logo_sound.jpg">
+					  <img src="https://images.unsplash.com/photo-1617458740103-101b37048afc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470">
 					  <h3>Sound Recording</h3>
 					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				  </div>
 				  <div class="box">
-					  <img src="./img/logo_master.jpg">
+					  <img src="https://images.unsplash.com/photo-1618609377864-68609b857e90?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928">
 					  <h3>Mastering</h3>
 					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				  </div>
