--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	    <meta name="author" content="David Asamani DaCosta">
 	    <title>Ghost Studios | Welcome</title>
 	    <link rel="icon" href="./img/tab_icon.png">
-	    <!-- <link rel="stylesheet" href="style.css"> -->
+	    <link rel="stylesheet" href="style.css">
     </head>
     <body>
 	    <header>
